Relocate dangling javadocs in BlockRenderer to their real methods
The buildFromEntityParts and engineForBlockIcon docs each sat above
the wrong method, leaving two neighbours with stacked javadocs and two
with none. Move each doc onto its matching method. Incidental tidy of
imports, brace style, and getFirst() usage in tryFirstBlockstateApply.